# guilded-stats

./: README.md  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
cfg/: tailwind.config.ts
src/: api.ts  index.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: http.rs  main.rs
src/backend/: api.ts  fetch.ts
src/ui/: App.tsx
src/ui/pages/: Home.tsx  Tracker.tsx
